--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
 version: "3.9"
 services:
-  web:
-    build: .
-    ports: ["8090:8000"]
-    depends_on: [db]
-  db:
-    image: mongo:6
-    volumes: ["dbdata:/data/db"]
-volumes:
-  dbdata:
+  webapp:
+    image: seth762/webapp:v6
+    ports: ["80:1200"]
+    environment:
+      PORT: 1200
+  testapp:
+    image: crccheck/hello-world
+    ports: ["7070:8000"]
