--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   webapp:
-    image: seth762/webapp-release:v2
+    image: seth762/webapp-jenkins:v1
     ports: ["80:1200"]
     environment:
       PORT: 1200
