--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,44 +1,97 @@
-# For more information read: https://docs.github.com/en/actions/reference/workflows-and-actions/workflow-syntax#permissions
+name: CI Pipeline
 
-name: TOT CICD
 on:
-  push:
-    branches: [ main ]
   pull_request:
     branches: [ main ]
-env:
-  IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/webapp-release:v2
 
 jobs:
-  build-test-and-push:
+  checkout:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Use Node 18
-        uses: actions/setup-node@v4
+  build:
+    runs-on: ubuntu-latest
+    needs: checkout
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: "20"
+      - name: Install dependencies
+        run: npm ci
+      - name: Build
+        run: npm run build  
 
-      - name: Install deps
-        working-directory: app
-        run: npm install
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          node-version: "20"
+      - run: npm ci
+      - name: Unit tests
+        run: npm test  
 
-      - name: Build image
-        run: docker build -t "$IMAGE" .
+  sast:
+    runs-on: ubuntu-latest
+    needs: test
+    outputs:
+      sast_passed: ${{ steps.sast_check.outputs.sast_passed }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+      - run: npm ci
+      - id: sast_check
+        run: |
+          if npm audit --audit-level=high; then
+            echo "sast_passed=true" >> $GITHUB_OUTPUT
+          else
+            echo "sast_passed=false" >> $GITHUB_OUTPUT
+            exit 1
+          fi
 
-      - name: Push image
-        run: docker push "$IMAGE"
+  build_image:
+    runs-on: ubuntu-latest
+    needs: sast
+    steps:
+      - uses: actions/checkout@v4
+      - name: Build Docker image
+        run: docker build -t webapp:${{ github.sha }} .
+
+  trivy_scan:
+    runs-on: ubuntu-latest
+    needs: build_image
+    outputs:
+      trivy_passed: ${{ steps.scan.outcome == 'success' && 'true' || 'false' }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Trivy Image Scan
+        id: scan
+        uses: aquasecurity/trivy-action@0.20.0
+        with:
+          image-ref: webapp:${{ github.sha }}
+          format: table
+          exit-code: "1"
+          vuln-type: "os,library"
+          severity: "HIGH,CRITICAL"
+        continue-on-error: false
+
+  push_dockerhub:
+    runs-on: ubuntu-latest
+    needs: [sast, trivy_scan]
+    if: needs.sast.outputs.sast_passed == 'true' && needs.trivy_scan.outputs.trivy_passed == 'true'
+    steps:
+      - uses: actions/checkout@v4
+      - name: DockerHub login
+        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+      - name: Push Docker image
+        run: |
+          IMAGE=docker.io/${{ secrets.DOCKERHUB_USERNAME }}/webapp
+          docker tag webapp:${{ github.sha }} $IMAGE:${{ github.sha }}
+          docker push $IMAGE:${{ github.sha }}
